--- a/index.html
+++ b/index.html
@@ -345,17 +345,20 @@ if (cookiecook != "no") {
 <div class="rabota">
 	<a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
 </div>
+<div class="rabota">
+	<a class="rabota" href="/clips"><p>Видео от зрителей</p></a>
+</div>
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/271625f1a1cdd488d0c0478179a307dc?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/fcec97e5b1062ffe58c772a8fced0adb?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 08.05.2024</b>
-        <p>С 14:40 МСК:</p>
+		<b>Расписание на 12.05.2024</b>
+        <p>С 11:40 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -364,9 +367,9 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>16:35 МСК:</p>
+        <p>13:35 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>17:05 МСК:</p>
+        <p>14:00 МСК:</p>
         <p>К/Ф "Карачун"</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
