--- a/yauchastnik.html
+++ b/yauchastnik.html
@@ -349,6 +349,9 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Стань участником проекта «Видео от зрителей»!<h1>
+     <div class="rabota">
+     <a class="rabota" href="/clips"><p>Видео от зрителей</p></a>
+     </div>
      <div class='Form'>
          <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/6627e243f47e734d13d9e70f/?iframe=1" frameborder="0" name="ya-form-6627e243f47e734d13d9e70f" width="550"></iframe>
      </div>
