--- a/clips.html
+++ b/clips.html
@@ -361,27 +361,26 @@ if (cookiecook != "no") {
 </div> -->
 <div class="vid1">
     <img src="/theme/images/1место.png">
-    <iframe src="https://nuum.ru/clips/1881038-roblox-metro-moskvy-nekrasovka" width="325" height="646" allow="autoplay; encrypted-media; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-    <p>Видео от Райка and Лайка</p>
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/25de0d972138b5638cb7ddf4dbf014b1?p=UdBt1_hwfCVNa_tl3VtL-w&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от maksytkapng</p>
+    <p>Категория: Игра «Метро Москвы Некрасовка»</p>
     <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/cloud/663bae823e9d0897c0502942/?iframe=1" frameborder="0" name="ya-form-663bae823e9d0897c0502942" width="280"></iframe>
 </div>
 <div class="vid">
     <img src="/theme/images/2место.png">
-    <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239053&hd=2" width="325" height="646" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-    <p>Видео от Райка and Лайка</p>
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/f6d6dec8e2d589118891d9aa7351c116?p=j7Ob6gSUbRQLrUTOKQh1ig&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от CheaterGameStudio</p>
+    <p>Категория: Игра «Метро Москвы Некрасовка»</p>
+    <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/cloud/6640803a3e9d08733cc28971/?iframe=1" frameborder="0" name="ya-form-6640803a3e9d08733cc28971" width="280"></iframe>
 </div>
-<div class="vid1">
+<!-- <div class="vid1">
     <img src="/theme/images/3место.png">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/fbf5f3f7980952cb8f12d1c23f925498?p=BcpkuDSQkEYA4shvh3LN0g&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от Райка and Лайка</p>
-</div>
+</div> -->
 <div class="vid">
     <img src="/theme/images/Остальные.png">
-    <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239053&hd=2" width="325" height="646" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-    <p>Видео от Райка and Лайка</p>
-</div>
-<div class="vid1">
-    <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239053&hd=2" width="325" height="646" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/fbf5f3f7980952cb8f12d1c23f925498?p=BcpkuDSQkEYA4shvh3LN0g&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от Райка and Лайка</p>
 </div>
 
