--- a/livetv.html
+++ b/livetv.html
@@ -351,13 +351,13 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/271625f1a1cdd488d0c0478179a307dc?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 08.05.2024</b>
-        <p>С 14:40 МСК:</p>
+        <b>Расписание на 12.05.2024</b>
+        <p>С 11:40 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -366,9 +366,9 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>16:35 МСК:</p>
+        <p>13:35 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>17:05 МСК:</p>
+        <p>14:00 МСК:</p>
         <p>К/Ф "Карачун"</p>
      </div>
 </div>
