--- a/clips.html
+++ b/clips.html
@@ -362,26 +362,34 @@ if (cookiecook != "no") {
 <div class="vid1">
     <img src="/theme/images/1место.png">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/25de0d972138b5638cb7ddf4dbf014b1?p=UdBt1_hwfCVNa_tl3VtL-w&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    <p>Видео от maksytkapng</p>
+    <p>Видео от "maksytkapng"</p>
     <p>Категория: Игра «Метро Москвы Некрасовка»</p>
     <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/cloud/663bae823e9d0897c0502942/?iframe=1" frameborder="0" name="ya-form-663bae823e9d0897c0502942" width="280"></iframe>
 </div>
 <div class="vid">
     <img src="/theme/images/2место.png">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/f6d6dec8e2d589118891d9aa7351c116?p=j7Ob6gSUbRQLrUTOKQh1ig&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    <p>Видео от CheaterGameStudio</p>
+    <p>Видео от "CheaterGameStudio"</p>
     <p>Категория: Игра «Метро Москвы Некрасовка»</p>
     <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/663bae72068ff083faa71bf1/?iframe=1" frameborder="0" name="ya-form-663bae72068ff083faa71bf1" width="280"></iframe>
 </div>
-<!-- <div class="vid1">
+<div class="vid1">
     <img src="/theme/images/3место.png">
-    <iframe width="325" height="646" src="https://rutube.ru/play/embed/fbf5f3f7980952cb8f12d1c23f925498?p=BcpkuDSQkEYA4shvh3LN0g&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    <p>Видео от Райка and Лайка</p>
-</div> -->
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/?p=Do4q-q4eVMqHeUJuAPBqpw&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от "Петров Арсений"</p>
+    <p>Категория: Игра «Метро Москвы Некрасовка»</p>
+    <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/6640fb4c5d2a068600da6e7a/?iframe=1" frameborder="0" name="ya-form-6640fb4c5d2a068600da6e7a" width="280"></iframe>
+</div>
 <div class="vid">
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/b85b324e92cfbf0808d6ba9f1330043e?p=wStBRWY51s-1ZKUxF2Y9Mw&skinColor=5e35b1" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от "Lock1"</p>
+    <p>Категория: Другое</p>
+    <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/6640fd2b3e9d088664c28962/?iframe=1" frameborder="0" name="ya-form-6640fd2b3e9d088664c28962" width="280"></iframe>
+</div>
+<div class="vid1">
     <img src="/theme/images/Остальные.png">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/fbf5f3f7980952cb8f12d1c23f925498?p=BcpkuDSQkEYA4shvh3LN0g&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    <p>Видео от Райка and Лайка</p>
+    <p>Видео от интернет-телеканала "Райка and Лайка"</p>
 </div>
 
 <div class="footer2">
