--- a/clips.html
+++ b/clips.html
@@ -391,6 +391,12 @@ if (cookiecook != "no") {
     <p>Категория: Другое</p>
     <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/6640fd2b3e9d088664c28962/?iframe=1" frameborder="0" name="ya-form-6640fd2b3e9d088664c28962" width="280"></iframe>
 </div>
+<div class="vid">
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/c25a77d6b07ad72c7fd7e55e6cc35689?p=B3zvI86MA8ZwQv3ZBhEwbg&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от "KERVILL"</p>
+    <p>Категория: Игра «Метро Москвы Некрасовка»</p>
+    <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/66438288d04688e1343b3ada/?iframe=1" frameborder="0" name="ya-form-66438288d04688e1343b3ada" width="280"></iframe>
+</div>
 
 <div class="footer2">
      <div class="sob">
