--- a/clips.html
+++ b/clips.html
@@ -373,7 +373,7 @@ if (cookiecook != "no") {
 </div>
 <div class="vid1">
     <img src="/theme/images/3место.png">
-    <iframe width="325" height="646" src="https://rutube.ru/play/embed/?p=vZbSUctpYnaPOFgsWyhVrg&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/7e127d694b14250ef6675cbbe0749076?p=vZbSUctpYnaPOFgsWyhVrg&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от "Lock1"</p>
     <p>Категория: Города и сёла России</p>
 </div>
