--- a/index.html
+++ b/index.html
@@ -351,15 +351,15 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/fcec97e5b1062ffe58c772a8fced0adb?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/4f6f765c756cdc1e626ad7543f641c2f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 24.05.2024</b>
-        <p>С 14:00 МСК:</p>
+		<b>Расписание на 13.06.2024</b>
+        <p>С 11:20 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -368,9 +368,9 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>16:05 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>16:20 МСК:</p>
+        <p>16:30 МСК:</p>
         <p>К/Ф "Карачун"</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
