--- a/index.html
+++ b/index.html
@@ -351,14 +351,14 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/4f6f765c756cdc1e626ad7543f641c2f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 13.06.2024</b>
+		<b>Расписание на 14.06.2024</b>
         <p>С 11:20 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
