--- a/livetv.html
+++ b/livetv.html
@@ -351,14 +351,14 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/4f6f765c756cdc1e626ad7543f641c2f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="560" height="315" src="https://rutube.ru/play/embed/4d5f54dc5475a71d255cf0ea4862b1cd?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 14.06.2024</b>
-        <p>С 11:20 МСК:</p>
+        <p>С 12:00 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -367,9 +367,9 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>13:15 МСК:</p>
+        <p>13:55 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>13:30 МСК:</p>
+        <p>14:18 МСК:</p>
         <p>К/Ф "Карачун"</p>
      </div>
 </div>
