--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p>
 </div>
 <div class="video">
 	<iframe width="560" height="315" src="https://rutube.ru/play/embed/4d5f54dc5475a71d255cf0ea4862b1cd?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
