--- a/index.html
+++ b/index.html
@@ -358,19 +358,19 @@ if (cookiecook != "no") {
 	<iframe width="560" height="315" src="https://rutube.ru/play/embed/4d5f54dc5475a71d255cf0ea4862b1cd?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 14.06.2024</b>
-        <p>С 12:00 МСК:</p>
+		<b>Расписание на 23.06.2024</b>
+        <p>С 14:30 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
-        <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
+        <mark><p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия. (В ПОСЛЕДНИЙ РАЗ НА ВЕЩАНИИ!) 14:42,  17:15,  19:22,  21:16,  23:11</p></mark>
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>-Короткометражный фильм "СДЕЛКА".</p>
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>13:55 МСК:</p>
+        <p>16:25 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>14:18 МСК:</p>
+        <p>16:48 МСК:</p>
         <p>К/Ф "Карачун"</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
