--- a/index.html
+++ b/index.html
@@ -351,18 +351,18 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p> -->
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://rutube.ru/play/embed/4d5f54dc5475a71d255cf0ea4862b1cd?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/e3cb1ad0825866f26459a6d2568d3d8a?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
 		<b>Расписание на 23.06.2024</b>
         <p>С 14:30 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
-        <mark><p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия. (В ПОСЛЕДНИЙ РАЗ НА ВЕЩАНИИ!) 14:42,  17:15,  19:22,  21:16,  23:11</p></mark>
+        <mark>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия. (В ПОСЛЕДНИЙ РАЗ НА ВЕЩАНИИ!) 14:42,  17:15,  19:22,  21:16,  23:11</mark>
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>-Короткометражный фильм "СДЕЛКА".</p>
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
