--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/e3cb1ad0825866f26459a6d2568d3d8a?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
