--- a/index.html
+++ b/index.html
@@ -351,26 +351,25 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/e3cb1ad0825866f26459a6d2568d3d8a?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/831746daa25d04866585067f9e8b7d9e?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 23.06.2024</b>
-        <p>С 14:30 МСК:</p>
+		<b>Расписание на 29.06.2024</b>
+        <p>С 14:10 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
-        <mark>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия. (В ПОСЛЕДНИЙ РАЗ НА ВЕЩАНИИ!) 14:42,  17:15,  19:22,  21:16,  23:11</mark>
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>-Короткометражный фильм "СДЕЛКА".</p>
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>16:25 МСК:</p>
+        <p>15:48 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>16:48 МСК:</p>
+        <p>16:10 МСК:</p>
         <p>К/Ф "Карачун"</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
