--- a/livetv.html
+++ b/livetv.html
@@ -351,14 +351,15 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/831746daa25d04866585067f9e8b7d9e?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="560" height="315" src="https://nuum.ru/embed/record/2679074" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <!-- <iframe width="720" height="405" src="https://rutube.ru/play/embed/831746daa25d04866585067f9e8b7d9e?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
      </div>
      <div class="title1">
-        <b>Расписание на 29.06.2024</b>
-        <p>С 14:20 МСК:</p>
+        <b>Расписание на 04.07.2024</b>
+        <p>С 12:30 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -366,9 +367,9 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>15:58 МСК:</p>
+        <p>14:08 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>16:20 МСК:</p>
+        <p>14:30 МСК:</p>
         <p>К/Ф "Карачун"</p>
      </div>
 </div>
