--- a/index.html
+++ b/index.html
@@ -371,6 +371,12 @@ if (cookiecook != "no") {
         <p>К/Ф "ЭГО"</p>
         <p>14:30 МСК:</p>
         <p>К/Ф "Карачун"</p>
+        <p>19:07 МСК:</p>
+        <p>Главное к этой минуте</p>
+        <p>19:09 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:05 МСК:</p>
+        <p>Главное к этой минуте</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="title2">
