--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p>
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://nuum.ru/embed/record/2679074" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/831746daa25d04866585067f9e8b7d9e?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
 		<b>Расписание на 04.07.2024</b>
@@ -387,17 +387,17 @@ if (cookiecook != "no") {
 		<p>5106 2180 3937 8336</p> -->
 </div>
 <div class="Opros">
-	<iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
 </div>
 <div class="title1">
 		<b>Видео</b>
 </div>
 <div class='video'>
 	<!-- <video src="/theme/images/Rasp2024.mp4" controls width="640" height="380"></video> -->
-	<iframe width="560" height="315" src="https://nuum.ru/embed/record/1782846" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://nuum.ru/embed/record/2275032" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<a class="button_glbol" href="https://vk.com/video/@rayka_and_layka_new"><b>Ещё видео</b></a>
+<a class="button_glbol" href="https://nuum.ru/channel/rayka_and_layka-tv"><b>Ещё видео</b></a>
 
 <iframe src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating" width="300" height="250" frameborder="0"></iframe>
 
