--- a/livetv.html
+++ b/livetv.html
@@ -351,14 +351,14 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/831746daa25d04866585067f9e8b7d9e?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/e9a6d6308fb922d040469791a4267819?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 04.07.2024</b>
-        <p>С 12:30 МСК:</p>
+        <b>Расписание на 27.07.2024</b>
+        <p>С 14:30 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -366,16 +366,16 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>14:08 МСК:</p>
+        <p>16:07 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>14:30 МСК:</p>
+        <p>16:30 МСК:</p>
         <p>К/Ф "Карачун"</p>
-        <p>19:07 МСК:</p>
-        <p>Главное к этой минуте</p>
-        <p>19:09 МСК:</p>
+        <!-- <p>19:07 МСК:</p>
+        <p>Главное к этой минуте</p> -->
+        <p>16:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>21:05 МСК:</p>
-        <p>Главное к этой минуте</p>
+        <!-- <p>16:55 МСК:</p>
+        <p>Главное к этой минуте</p> -->
      </div>
 </div>
 <div class="footer2">
