--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@ if (cookiecook != "no") {
 		<p>Запись вещания:</p> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/e9a6d6308fb922d040469791a4267819?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/68338a24fa07b59d7410545450408d82?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
 		<b>Расписание на 27.07.2024</b>
-        <p>С 14:30 МСК:</p>
+        <p>С 14:50 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -367,13 +367,13 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>16:07 МСК:</p>
+        <p>16:26 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>16:30 МСК:</p>
+        <p>16:49 МСК:</p>
         <p>К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>16:55 МСК:</p>
+        <p>17:15 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>16:55 МСК:</p>
         <p>Главное к этой минуте</p> -->
@@ -399,8 +399,9 @@ if (cookiecook != "no") {
 
 <a class="button_glbol" href="https://nuum.ru/channel/rayka_and_layka-tv"><b>Ещё видео</b></a>
 
-<iframe src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating" width="300" height="250" frameborder="0"></iframe>
-
+<div class="ya">
+	<iframe src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating" width="300" height="250" frameborder="0"></iframe>
+</div>
 <div class="footer2">
      <div class="sob">
           <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
