--- a/rabota-osnova.html
+++ b/rabota-osnova.html
@@ -36,6 +36,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="sheet">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 	<style>@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');</style>
 
 
@@ -86,202 +87,6 @@
 		}
 	</style>
 
-<!-- <style>
-  #snowflakeContainer {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    display: none;
-  }
-
-  .snowflake {
-    position: fixed;
-    background-color: #CCC;
-    user-select: none;
-    z-index: 1000;
-    pointer-events: none;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-  }
-</style>
-
-<div id="snowflakeContainer">
-  <span class="snowflake"></span>
-</div>
-
-<script>
-  // Массив для хранения объектов Snowflake
-  var snowflakes = [];
-
-  // Глобальные переменные для размера окна браузера
-  var browserWidth;
-  var browserHeight;
-
-  // Указываем количество снежинок, которые должны быть видимыми
-  var numberOfSnowflakes = 55;
-
-  // Флаг для сброса положения снежинок
-  var resetPosition = false;
-
-  // Устанавливаем параметр enableAnimations
-  var enableAnimations = false;
-  var reduceMotionQuery = matchMedia("(prefers-reduced-motion)");
-
-  // Изменяем значение enableAnimations
-  function setAccessibilityState() {
-    if (reduceMotionQuery.matches) {
-      enableAnimations = false;
-    } else { 
-      enableAnimations = true;
-    }
-  }
-  setAccessibilityState();
-
-  reduceMotionQuery.addListener(setAccessibilityState);
-
-  //
-  // Все начинается здесь...
-  //
-  function setup() {
-    if (enableAnimations) {
-      window.addEventListener("DOMContentLoaded", generateSnowflakes, false);
-      window.addEventListener("resize", setResetFlag, false);
-    }
-  }
-  setup();
-
-  //
-  // Конструктор объекта Snowflake
-  //
-  function Snowflake(element, speed, xPos, yPos) {
-    // устанавливаем начальные свойства снежинки
-    this.element = element;
-    this.speed = speed;
-    this.xPos = xPos;
-    this.yPos = yPos;
-    this.scale = 1;
-
-    // объявляем переменные, используемые для движения снежинки
-    this.counter = 0;
-    this.sign = Math.random() < 0.5 ? 1 : -1;
-
-    // устанавливаем значения начальной непрозрачности и размера снежинки 
-    this.element.style.opacity = (.1 + Math.random()) / 3;
-  }
-
-  //
-  // Функция, ответственная за перемещение снежинки
-  //
-  Snowflake.prototype.update = function () {
-    // используем тригонометрию, чтобы определить позицию x и y
-    this.counter += this.speed / 5000;
-    this.xPos += this.sign * this.speed * Math.cos(this.counter) / 40;
-    this.yPos += Math.sin(this.counter) / 40 + this.speed / 30;
-    this.scale = .5 + Math.abs(10 * Math.cos(this.counter) / 20);
-
-    // устанавливаем позицию снежинки
-    setTransform(Math.round(this.xPos), Math.round(this.yPos), this.scale, this.element);
-
-    // если снежинка опустится ниже окна браузера, переместим ее обратно наверх   
-    if (this.yPos > browserHeight) {
-      this.yPos = -50;
-    }
-  }
-
-  //
-  // Эффективный способ установить положение и размер снежинки
-  //
-  function setTransform(xPos, yPos, scale, el) {
-    el.style.transform = `translate3d(${xPos}px, ${yPos}px, 0) scale(${scale}, ${scale})`;
-  }
-
-  //
-  // Функция, ответственная за создание снежинки
-  //
-  function generateSnowflakes() {
-
-    // получаем элемент снежинки из DOM и сохраняем его
-    var originalSnowflake = document.querySelector(".snowflake");
-
-    // получаем доступ к контейнеру родителя элемента снежинки
-    var snowflakeContainer = originalSnowflake.parentNode;
-    snowflakeContainer.style.display = "block";
-
-    // получаем размер окна браузера
-    browserWidth = document.documentElement.clientWidth;
-    browserHeight = document.documentElement.clientHeight;
-
-    // создаем снежинку	
-    for (var i = 0; i < numberOfSnowflakes; i++) {
-
-      // клонируем индивидуальную снежинку и добавляем ее в snowflakeContainer
-      var snowflakeClone = originalSnowflake.cloneNode(true);
-      snowflakeContainer.appendChild(snowflakeClone);
-
-      // устанавливаем начальную позицию и свойства для оригинальной снежинки
-      var initialXPos = getPosition(50, browserWidth);
-      var initialYPos = getPosition(50, browserHeight);
-      var speed = 5 + Math.random() * 40;
-
-      // создаем объект Snowflake
-      var snowflakeObject = new Snowflake(snowflakeClone,
-        speed,
-        initialXPos,
-        initialYPos);
-      snowflakes.push(snowflakeObject);
-    }
-
-    // убираем снежинку, так как больше не нужно, чтобы она была видимой
-    snowflakeContainer.removeChild(originalSnowflake);
-
-    moveSnowflakes();
-  }
-
-  //
-  // Отвечает за перемещение каждой снежинки, вызывая функцию обновления
-  //
-  function moveSnowflakes() {
-
-    if (enableAnimations) {
-      for (var i = 0; i < snowflakes.length; i++) {
-        var snowflake = snowflakes[i];
-        snowflake.update();
-      }      
-    }
-
-    // Сбрасывает значения позиций всех снежинок до установки нового значения
-    if (resetPosition) {
-      browserWidth = document.documentElement.clientWidth;
-      browserHeight = document.documentElement.clientHeight;
-
-      for (var i = 0; i < snowflakes.length; i++) {
-        var snowflake = snowflakes[i];
-
-        snowflake.xPos = getPosition(50, browserWidth);
-        snowflake.yPos = getPosition(50, browserHeight);
-      }
-
-      resetPosition = false;
-    }
-
-    requestAnimationFrame(moveSnowflakes);
-  }
-
-  //
-  
-  function getPosition(offset, size) {
-    return Math.round(-1 * offset + Math.random() * (size + 2 * offset));
-  }
-
-  //
-  // Сброс позиций всех снежинок
-  //
-  function setResetFlag(e) {
-    resetPosition = true;
-  }
-</script> -->
-
 <!-- Принятие куки -->
 <div class="cookie_notice">
     Этот сайт использует файлы cookies и сервисы сбора технических данных посетителей для обеспечения работоспособности и улучшения качества обслуживания. Продолжая использовать наш сайт, вы автоматически соглашаетесь с использованием данных технологий.
@@ -319,10 +124,39 @@ if (cookiecook != "no") {
 <body>
 	<div class="container">
 		<div class="buttons">
-		<a class="button" href="/"><p>Главная</p></a>
-		<a class="button" href="/livetv"><p>Прямой эфир</p></a>
-		<a class="button" href="/history"><p>Вакансии</p></a>
-		<!-- <a class="button" href="/rabota"><p>Стать частью команды</p></a> -->
+			<div class="logoo">
+				<img src="/theme/images/NewLogo.png">
+				<p>Интернет-телеканал "Райка and Лайка"</p>
+			  
+			</div>
+		</div>
+		<div class="dropdown">
+			<a onclick="myFunction()" class="dropbtn">МЕНЮ</a>
+			<div id="myDropdown" class="dropdown-content">
+			<a class="button" href="/"><p>Главная</p></a>
+			<a class="button" href="/livetv"><p>Прямой эфир</p></a>
+			<a class="button" href="/history"><p>Вакансии</p></a>
+			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
+			<script>/* Когда пользователь нажимает на кнопку,
+переключение между скрытием и отображением раскрывающегося содержимого */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Закройте выпадающее меню, если пользователь щелкает за его пределами
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}</script>
+			  </div>
 		</div>
 <section id="content" class="body">
   <header>
@@ -351,14 +185,28 @@ if (cookiecook != "no") {
     <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/650dd11d90fa7bbb46737e8d/?iframe=1" frameborder="0" name="ya-form-650dd11d90fa7bbb46737e8d" width="650"></iframe>
 </div>
 <p class="politica">Вы можете ознакомиться с <a href="/politica">Политикой в отношении обработки персональных данных</a></p>
-<div class="footer2">
-     <div class="sob">
-          <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
-     </div>
-    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
-</div>
   </div><!-- /.entry-content -->
 </section>
 	</div>
 </body>
+	<div class="podval">
+		<div class="title2">
+			<p>Реквизиты для финансовой помощи</p>
+			<p>Номер карты МТС Банка:</p>
+			<p>2200 2804 1534 3484</p>
+	<!-- 		<p>Номер карты Юмани:</p>
+			<p>5106 2180 3937 8336</p> -->
+		</div>
+			<iframe class="ya" src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating" width="300" height="50" frameborder="0"></iframe>
+		<div class="title2"><p>Электронная почта редакции: rayka_and_layka-tv@ro.ru</p>
+			<p>По всем вопросам: raika.official@yandex.ru</p>
+		</div>
+		<div class="footer2">
+		     <div class="sob">
+		          <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
+		     </div>
+		    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b>
+		    	<p>.</p></div>
+		</div>
+	</div>
 </html>
