--- a/livetv.html
+++ b/livetv.html
@@ -188,11 +188,11 @@ window.onclick = function(event) {
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
      <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/ad6a4fb1508461f0b9126528b44877b7/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/2b01c63f0ab704f9c3563f85078f5d42/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 02.08.2024</b>
-        <p>С 12:00 МСК:</p>
+        <b>Расписание на 04.08.2024</b>
+        <p>С 15:00 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -200,16 +200,16 @@ window.onclick = function(event) {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>13:35 МСК:</p>
+        <p>16:35 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>14:00 МСК:</p>
+        <p>17:00 МСК:</p>
         <p>К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>14:25 МСК:</p>
+        <p>17:25 МСК:</p>
         <p>Продолжение вещания</p>
-        <!-- <p>16:55 МСК:</p>
-        <p>Главное к этой минуте</p> -->
+        <p>20:35 МСК:</p>
+        <p>Итоги недели</p>
      </div>
 </div>
   </div><!-- /.entry-content -->
