--- a/livetv.html
+++ b/livetv.html
@@ -208,8 +208,8 @@ window.onclick = function(event) {
         <p>Главное к этой минуте</p> -->
         <p>17:25 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>20:35 МСК:</p>
-        <p>Итоги недели</p>
+        <!-- <p>20:35 МСК:</p>
+        <p>Итоги недели</p> -->
      </div>
 </div>
   </div><!-- /.entry-content -->
