--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-		<p>Запись вещания:</p> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<p>Запись вещания:</p>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/1141c545005f5bc8aab5880f3204777c/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
