--- a/livetv.html
+++ b/livetv.html
@@ -185,8 +185,8 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/1141c545005f5bc8aab5880f3204777c/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
