--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
 		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
