--- a/index.html
+++ b/index.html
@@ -194,22 +194,24 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 08.08.2024</b>
-        <p>С 14:00 МСК:</p>
-        <p>-Короткометражный фильм "Страйдер"</p>
+		<b>Расписание на 13.08.2024</b>
+        <p>С 11:30 МСК:</p>
+        <p>- Фильм "Чудеса случаются" <mark>НОВОЕ</mark></p>
+        <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
-        <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
-        <p>-Короткометражный фильм "СДЕЛКА".</p>
-        <p>-Велопрогулка по Подмосковью - Люберцы</p>
-        <p>-Короткометражный фильм "Беседа"</p>
-        <p>-Короткометражный фильм "Скейт"</p>
-        <p>15:36 МСК:</p>
-        <p>К/Ф "ЭГО"</p>
-        <p>16:00 МСК:</p>
-        <p>К/Ф "Карачун"</p>
+        <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
+        <p>- Короткометражный фильм "СДЕЛКА".</p>
+        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- "Импульс - шаг в будущее" <mark>НОВОЕ</mark></p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>13:37 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>14:00 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>16:25 МСК:</p>
+        <p>14:25 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>20:35 МСК:</p>
         <p>Итоги недели</p> -->
